corrigido script de gerar aplicação .deb no linux